use magiclib